Remove contact icons

--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             <div class="row">
                 <div class="col-sm footer-element contact-details">
                     <span><a href="tel:0875553555" aria-label="Phone number - click to call">Call us: 0875553555
-                    <i class="fas fa-phone"></i></a></span><br>
+                    </a></span><br>
                     <span><a href="mailto:info@doggystyle.ie" target="_blank" aria-label="Email">Email: info@doggystyle.ie
-                    <i class="fas fa-envelope"></i></a></span>
+                    </a></span>
                 </div>
                 <div class="col-sm call-button-container">
                     <form action="contact.html" method="get">
